--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,6 +5,8 @@
 @import 'normalize.scss';
 @import './helpers/variables.scss';
 @import './helpers/fonts.scss';
+@import './helpers/mixin.scss';
+@import './helpers/placeholder.scss';
 @import 'base.scss';
 
 @import './sections/header.scss';
