--- a/src/sass/sections/footer.scss
+++ b/src/sass/sections/footer.scss
@@ -1,12 +1,6 @@
 .footer-wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
+  @extend %flexbox;
+
   align-items: center;
   border-top: 1px solid #e5e5e5;
   padding-top: 10px;
@@ -15,23 +9,18 @@
 
 .footer-link {
   &-wrapper {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
   }
   &__description {
+    @extend %font-base;
     color: $secondary-text-color;
-    font-family: Montserrat;
-    font-size: 14px;
-    font-weight: 400;
+
     margin-right: 5px;
   }
 
   &__link {
+    @extend %font-base;
     color: $secondary-accent-color;
-    font-family: $main-font;
-    font-size: 14px;
-    font-weight: 400;
     text-decoration: none;
   }
 }
@@ -57,19 +46,15 @@ input::placeholder {
 }
 
 .input-box {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   &__placeholder {
+    @include font(15px, 400, 24px);
     width: 230px;
     height: 40px;
     border: 1px solid #e7e7e7;
     background-color: $main-text-color;
     font-family: $secondary-font;
     font-style: italic;
-    font-size: 15px;
-    font-weight: 400;
-    line-height: 24px;
     padding-left: 10px;
     outline: 0px;
   }
