--- a/src/sass/sections/header.scss
+++ b/src/sass/sections/header.scss
@@ -46,10 +46,9 @@
 }
 
 .logotype {
+  @include font(30px, 700);
   color: $main-text-color;
   font-family: $main-font;
-  font-size: 30px;
-  font-weight: 700;
   text-decoration: none;
   transition: all 200ms linear;
 
@@ -59,24 +58,14 @@
 }
 
 .site-navigation {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
+  @extend %flexbox;
   align-items: center;
   padding-top: 32px;
   padding-bottom: 184px;
 }
 
 .menu-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
+  @extend %flexbox;
   padding-top: 10px;
 
   li {
@@ -84,10 +73,9 @@
   }
 
   &__link {
+    @include font(14px, 700);
     color: $main-text-color;
     font-family: Montserrat;
-    font-size: 14px;
-    font-weight: 700;
     text-transform: uppercase;
     text-decoration: none;
     transition: all 200ms linear;
@@ -112,11 +100,7 @@
 }
 
 .navigation-list-wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
   padding-top: 10px;
 }
@@ -155,10 +139,9 @@
 
 .header-title {
   &__main-title {
+    @include font(72px, 400);
     color: $main-text-color;
     font-family: 'Kaushan Script';
-    font-size: 72px;
-    font-weight: 400;
     text-align: center;
   }
   &__secondary-title {
