--- a/src/sass/sections/team.scss
+++ b/src/sass/sections/team.scss
@@ -1,9 +1,7 @@
 .team__description {
+  @include font(15px, 400, 24px);
   color: $third-text-color;
   font-family: $secondary-font;
-  font-size: 15px;
-  font-weight: 400;
-  line-height: 24px;
   text-align: center;
   width: 960px;
   margin: 0 auto;
@@ -11,32 +9,24 @@
 }
 
 .team-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-
+  @extend %flexbox;
   &__item {
     width: 380px;
     text-align: center;
 
     &_name {
+      @extend %font-base;
+
       color: $secondary-text-color;
-      font-family: $main-font;
-      font-size: 14px;
-      font-weight: 400;
+
       text-transform: uppercase;
       padding-bottom: 12px;
     }
     &_position {
+      @include font(15px, 300, 24px);
       color: $third-text-color;
       font-family: $secondary-font;
       font-style: italic;
-      font-size: 15px;
-      font-weight: 300;
-      line-height: 24px;
     }
   }
   &__item:hover .overlay,
@@ -84,26 +74,17 @@
     rgba(252, 227, 138, 0.9) 0%,
     rgba(243, 129, 129, 0.9) 100%
   );
-  display: -webkit-box;
-  display: -ms-flexbox;
+
   display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
   justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
   opacity: 0;
-  -webkit-transition: all 200ms linear;
-  -o-transition: all 200ms linear;
   transition: all 200ms linear;
   visibility: hidden;
 }
 
 .social-links {
   list-style: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 
   a:hover,
@@ -118,14 +99,8 @@
     background-color: $accent-color;
     background-clip: padding-box;
     border: 1px solid transparent;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
     justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
     align-items: center;
     &_item {
       width: 12px;
