--- a/src/sass/sections/header.scss
+++ b/src/sass/sections/header.scss
@@ -51,9 +51,24 @@
   font-family: $main-font;
   text-decoration: none;
   transition: all 200ms linear;
+  animation: slide-in-elliptic-top-fwd 0.7s cubic-bezier(0.25, 0.46, 0.45, 0.94)
+    both;
 
   &:hover {
     color: $accent-color;
+  }
+}
+
+@keyframes slide-in-elliptic-top-fwd {
+  0% {
+    transform: translateY(-600px) rotateX(-30deg) scale(0);
+    transform-origin: 50% 100%;
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0) rotateX(0) scale(1);
+    transform-origin: 50% 1400px;
+    opacity: 1;
   }
 }
 
@@ -79,6 +94,7 @@
     text-transform: uppercase;
     text-decoration: none;
     transition: all 200ms linear;
+
     &:hover {
       color: $accent-color;
     }
